@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-20T16:22:30Z",
-  "count_outdated" : 401,
-  "uniques_outdated" : 231,
-  "count" : 427,
+  "timestamp" : "2022-07-21T01:23:19Z",
+  "count_outdated" : 404,
+  "uniques_outdated" : 232,
+  "count" : 430,
   "uniques" : 248,
   "clones" : [
-    {
-      "timestamp": "2022-07-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-07T00:00:00Z",
       "count": 2,
@@ -91,8 +84,8 @@
     },
     {
       "timestamp": "2022-07-20T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
