@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2022-07-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-07-07T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -64,7 +59,7 @@
     },
     {
       "timestamp": "2022-07-20T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
